--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,9 @@
 
 input[type='text'],
 input[type='email'],
-input[type='password'] {
+input[type='password'],
+input[type='number'],
+textarea {
   @apply w-full py-2 px-4 my-2 border rounded-md;
 }
 
