feature: Edit places funtionality and Home page ⭐

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,12 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+@layer base {
+  html {
+    font-family: 'Poppins', sans-serif;
+  }
+}
+
 input[type='text'],
 input[type='email'],
 input[type='password'],
 input[type='number'],
 textarea {
-  @apply w-full py-2 px-4 my-2 border rounded-md;
+  @apply w-full py-2 px-4 my-2 border-[1px] border-gray-300 rounded-md;
+}
+
+textarea {
+  height: 150px;
 }
 
 button {
