fix: Minor changes 🐞

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @layer base {
   html {
@@ -15,7 +14,7 @@ input[type='email'],
 input[type='password'],
 input[type='number'],
 textarea {
-  @apply w-full py-2 px-4 my-2 border-[1px] border-gray-300 rounded-md;
+  @apply w-full py-2 px-4 my-2 border border-gray-300 rounded-md;
 }
 
 textarea {
